--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,6 @@ DB_PASSWORD=12341234
 DB_NAME=CypherSchool
 
 JWT_SECRET_KEY=SDFGHJKJHGF
+
+GMAIL_USER="mycloud.storage.app1@gmail.com"
+GMAIL_PASSWORD="daydthnxutynwrtp"
